crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__93_double_restrict_intersection.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [
            AirCapabilityObligation {
                var_id: VarId(
                    3,
                ),
                cap_type: "Fuel",
                required_mask: 3,
                actual_mask: 0,
                kind: Call,
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "C003",
                    ),
                    severity: Error,
                    message: "`empty` has `Fuel` authority {(none)} but call site requires {burn, query} (missing: {burn, query})",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1532,
                            end: 1557,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
}
