crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__94_restrict_return_to_full_sink.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [
            AirCapabilityObligation {
                var_id: VarId(
                    4,
                ),
                cap_type: "Fuel",
                required_mask: 3,
                actual_mask: 1,
                kind: Call,
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "C003",
                    ),
                    severity: Error,
                    message: "`a_restricted` has `Fuel` authority {burn} but call site requires {burn, query} (missing: {query})",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1493,
                            end: 1509,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
}
