crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__95_multiple_cap_types_independent.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [
            AirCapabilityObligation {
                var_id: VarId(
                    2,
                ),
                cap_type: "Token",
                required_mask: 3,
                actual_mask: 3,
                kind: Call,
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "C003",
                    ),
                    severity: Error,
                    message: "`token` has `Token` authority {read, write} but call site requires {read, write} (missing: {(none)})",
                    hint: None,
                    span: Some(
                        Span {
                            start: 950,
                            end: 1072,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
}
