crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__97_spawn_restricted_cap_reject.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [
            AirCapabilityObligation {
                var_id: VarId(
                    2,
                ),
                cap_type: "Fuel",
                required_mask: 3,
                actual_mask: 1,
                kind: Spawn,
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "C003",
                    ),
                    severity: Error,
                    message: "`restricted` has `Fuel` authority {burn} but spawn argument requires {burn, query} (missing: {query})",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1161,
                            end: 1180,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
}
